obliviot theme WIP

--- a/content_builder/src/html/obliviot_OrganizationBGDemoComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationBGDemoComponent.html
@@ -21,8 +21,8 @@
       </script>    
    </head>
    <body>
-        <div data-component-name="obliviot_OrganizationBGDemoComponent" class="classes.darkBG" style="height:100%;">
-            <div id="gradient" class="classes.dark_pageTestContraint">
+        <div data-component-name="obliviot_OrganizationBGDemoComponent" class="classes.obliviotBG" style="height:100%;">
+            <div id="gradient" class="classes.obliviot_pageTestContraint">
 
             </div>
         </div>
