--- a/content_builder/src/html/obliviot_OrganizationLogoComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationLogoComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,12 +22,12 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="obliviot_OrganizationLogoComponent" class="classes.darkBG">
-            <img class="classes.dark_main_image" data-component-props="src={this.props.image_src}" />
-            <div class="classes.dark_main_image_text_container" data-component-value="{this.props.roster_games}">
-                <div class="classes.dark_main_image_text">Call of Duty</div>
-                <div class="classes.dark_main_image_text">Halo</div>
-                <div class="classes.dark_main_image_text">Ms Pacman</div>
+        <div data-component-name="obliviot_OrganizationLogoComponent" class="classes.obliviotBG">
+            <img class="classes.obliviot_main_image" data-component-props="src={this.props.image_src}" />
+            <div class="classes.obliviot_main_image_text_container" data-component-value="{this.props.roster_games}">
+                <div class="classes.obliviot_main_image_text">Call of Duty</div>
+                <div class="classes.obliviot_main_image_text">Halo</div>
+                <div class="classes.obliviot_main_image_text">Ms Pacman</div>
             </div>    
         </div>
    </body>
@@ -40,7 +40,7 @@
              });
 
              $("#about_button").click(function(){
-                 $('#dark_about_modal').modal('show');
+                 $('#obliviot_about_modal').modal('show');
              });
          });
     </script>
