--- a/content_builder/src/html/obliviot_OrganizationMobileNavComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationMobileNavComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,12 +22,12 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="obliviot_OrganizationMobileNavComponent" class="classes.darkNavBG">
-            <div class="classes.dark_mobile_nav_container">
-                <div class="classes.dark_mobile_nav_left">
-                    <img id="nav_img" class="classes.dark_nav_mobile_img" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/adminTemplate/1518192959017g5034r0j085fewubx1or.png" alt=""/>
+        <div data-component-name="obliviot_OrganizationMobileNavComponent" class="classes.obliviotNavBG">
+            <div class="classes.obliviot_mobile_nav_container">
+                <div class="classes.obliviot_mobile_nav_left">
+                    <img id="nav_img" class="classes.obliviot_nav_mobile_img" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/adminTemplate/1518192959017g5034r0j085fewubx1or.png" alt=""/>
                 </div>
-                <div class="classes.dark_mobile_nav_right">
+                <div class="classes.obliviot_mobile_nav_right">
                     <i class="fa fa-bars"></i>
                 </div>
             </div>
