--- a/content_builder/src/html/obliviot_OrganizationNewsComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationNewsComponent.html
@@ -28,10 +28,10 @@
                 <div class="classes.news_menu_item">
                     <div>
                         <div style="width:60%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
+                            <span class="classes.obliviot_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
                         </div>
                         <div style="width:40%;float:left">
-                            <span class="classes.dark_news_date" data-component-value="{this.props.blog_date}">February 19, 2018</span>
+                            <span class="classes.obliviot_news_date" data-component-value="{this.props.blog_date}">February 19, 2018</span>
                         </div>
                     </div>
                     <div style="width: 100%;height: 68px; overflow-y: hidden;">
@@ -39,8 +39,8 @@
                     </div>
                 </div>
             </div>
-            <div class="classes.dark_news__more_container">
-                <div id="more_news_button" class="classes.dark_news_more_button" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
+            <div class="classes.obliviot_news__more_container">
+                <div id="more_news_button" class="classes.obliviot_news_more_button" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
                     READ MORE
                 </div>
             </div>
