--- a/content_builder/src/html/obliviot_OrganizationNewsModuleComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationNewsModuleComponent.html
@@ -22,7 +22,7 @@
    </head>
    <body>
       <div data-component-name="obliviot_OrganizationNewsModuleComponent">
-            <div id="news_container" class="classes.dark_news_container">
+            <div id="news_container" class="classes.obliviot_news_container">
                     <div class="classes.section_title_container">
                         <h2>LATEST NEWS</h2>
                     </div>
