--- a/content_builder/src/html/obliviot_organizationMobileMenuComponent.html
+++ b/content_builder/src/html/obliviot_organizationMobileMenuComponent.html
@@ -22,39 +22,39 @@
    </head>
    <body>
       <div data-component-name="obliviot_OrganizationMobileMenuComponent">
-            <div class="classes.dark_mobile_menu">
-                <div class="classes.dark_mobile_menu_item">
-                    <a class="classes.dark_mobile_menu_item_box">
+            <div class="classes.obliviot_mobile_menu">
+                <div class="classes.obliviot_mobile_menu_item">
+                    <a class="classes.obliviot_mobile_menu_item_box">
                         Home
                     </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={this.props.handleAboutClick}">
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleAboutClick}">
                                 About
                             </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={this.props.handleStoreClick}">
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleStoreClick}">
                                 Store
                             </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={this.props.handleLoginClick}">
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleLoginClick}">
                                 Login
                             </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
                                 Facebook
                             </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
                                 Twitter
                             </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
                                 Youtube
                             </a>
                 </div>
