--- a/content_builder/src/html/obliviot_OrganizationMatchesComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationMatchesComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,13 +22,13 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="obliviot_OrganizationMatchesComponent" class="classes.darkNavBG">
+        <div data-component-name="obliviot_OrganizationMatchesComponent" class="classes.obliviotNavBG">
             <div id="recent_matches_container" class="classes.recent_matches_container">
                 <div style="padding-top: 0px;">
-                    <div class="classes.dark_section_title_container">
+                    <div class="classes.obliviot_section_title_container">
                         <h2>RECENT MATCHES</h2>
                     </div>
-                    <div class="classes.dark_recent_matches_body">
+                    <div class="classes.obliviot_recent_matches_body">
                         <div class="styles__recent_matchlist___3Px6i">
                             <div style="height: auto; overflow: auto;">
                                 <div>
