--- a/content_builder/src/html/obliviot_OrganizationNavComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationNavComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,37 +22,37 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="obliviot_OrganizationNavComponent" class="classes.darkNavBG">
+        <div data-component-name="obliviot_OrganizationNavComponent" class="classes.obliviotNavBG">
             <div class="ui stackable three column grid">
                 <div class="column">
                     <div class="classes.nav_left">
-                        <div class="classes.dark_social_menu_container" data-component-value="{this.props.social_links}">
-                            <div class="classes.dark_social_menu_item">
+                        <div class="classes.obliviot_social_menu_container" data-component-value="{this.props.social_links}">
+                            <div class="classes.obliviot_social_menu_item">
                                 <i class="fa fa-instagram"></i>
                             </div>
-                            <div class="classes.dark_social_menu_item">
+                            <div class="classes.obliviot_social_menu_item">
                                 <i class="fa fa-twitter"></i>
                             </div>
-                            <div class="classes.dark_social_menu_item">
+                            <div class="classes.obliviot_social_menu_item">
                                 <i class="fa fa-youtube"></i>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="classes.dark_nav_center">
-                        <div class="classes.dark_nav_header">
-                            <img id="nav_img" class="classes.dark_nav_img" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/adminTemplate/1518192959017g5034r0j085fewubx1or.png" alt=""/>
+                    <div class="classes.obliviot_nav_center">
+                        <div class="classes.obliviot_nav_header">
+                            <img id="nav_img" class="classes.obliviot_nav_img" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/adminTemplate/1518192959017g5034r0j085fewubx1or.png" alt=""/>
                         </div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="classes.dark_nav_right">
-                        <div class="classes.dark_org_menu_container">
-                            <a><div id="menu_login" data-component-props="onClick={this.props.handleLoginClick}" class="classes.org_menu_dark_item">Login</div></a>
-                            <a><div id="menu_store" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_dark_item">Store</div></a>
-                            <a><div id="menu_about" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_dark_item">About</div></a>
-                            <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}" class="classes.org_menu_dark_item">Home</div></a>
+                    <div class="classes.obliviot_nav_right">
+                        <div class="classes.obliviot_org_menu_container">
+                            <a><div id="menu_login" data-component-props="onClick={this.props.handleLoginClick}" class="classes.org_menu_obliviot_item">Login</div></a>
+                            <a><div id="menu_store" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_item">Store</div></a>
+                            <a><div id="menu_about" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_obliviot_item">About</div></a>
+                            <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}" class="classes.org_menu_obliviot_item">Home</div></a>
                         </div>
                     </div>
                 </div>
