--- a/content_builder/src/html/obliviot_OrganizationPageComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationPageComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -23,18 +23,18 @@
    </head>
    <body id="gradient">
         <div class="classes.fixed_div">
-                <div data-component-name="obliviot_OrganizationPageComponent" class="classes.darkMainBG">
-                        <div class="classes.dark_pageTestContraint">
-                            <header class='classes.darkHeader'>
-                                <div id="dark_header">
+                <div data-component-name="obliviot_OrganizationPageComponent" class="classes.obliviotMainBG">
+                        <div class="classes.obliviot_pageTestContraint">
+                            <header class='classes.obliviotHeader'>
+                                <div id="obliviot_header">
                                     <div data-component-value="{this.props.topSponsorContent}">News</div>
                                 </div>
                             </header>
                             <div class="classes.body_container">
-                                <div id="home_cont" class="classes.dark_nav_container">
+                                <div id="home_cont" class="classes.obliviot_nav_container">
                                     <div data-component-value="{this.props.navContent}">Nav</div>
                                 </div>
-                                <div id="logo_cont" class=classes.dark_main_image_container>
+                                <div id="logo_cont" class=classes.obliviot_main_image_container>
                                     <div data-component-value="{this.props.logoContent}">Logo</div>
                                 </div>
                                 <div id="theme_about_modal">
@@ -54,7 +54,7 @@
                                         <div data-component-value="{this.props.matchesContent}">News</div>
                                     </div>
                                 </div>
-                                <div id="video_cont" class="classes.dark_media_container">
+                                <div id="video_cont" class="classes.obliviot_media_container">
                                         <div data-component-value="{this.props.videoContent}">News</div>
                                 </div>
                             </div>
