--- a/content_builder/src/html/obliviot_OrganizationSponserComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationSponserComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,7 +22,7 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="obliviot_OrganizationSponserComponent" class="classes.darkBG">
+        <div data-component-name="obliviot_OrganizationSponserComponent" class="classes.obliviotBG">
             <div class="container col-sm-12">
                 <marquee behavior="scroll" direction="left" scrollamount="20"> 
                     <div class="container col-sm-4" style="width:274px;float:left;">
