--- a/content_builder/src/html/obliviot_OrganizationTwitterComponent.html
+++ b/content_builder/src/html/obliviot_OrganizationTwitterComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization obliviot Demo</title>
       <link rel="stylesheet" type="text/css" href="./Semantic-UI-CSS-master/semantic.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,8 +22,8 @@
       </script>  
    </head>
    <body>
-      <div data-component-name="obliviot_OrganizationTwitterComponent" class="classes.darkNavBG">
-            <div class="classes.dark_section_title_container">
+      <div data-component-name="obliviot_OrganizationTwitterComponent" class="classes.obliviotNavBG">
+            <div class="classes.obliviot_section_title_container">
                 <h2>LATEST TWEETS</h2>
             </div>
             <div data-component-value="{this.props.feed}">Feed</div>
