--- a/content_builder/src/html/dark_OrganizationNewsComponent.html
+++ b/content_builder/src/html/dark_OrganizationNewsComponent.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div style="width: 100%;height: 68px; overflow-y: hidden;">
-                        <p style="padding-top: 5px; font-weight: 400; font-size: 11px; line-height: 15px;" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                        <span style="padding-top: 5px; font-weight: 400; font-size: 11px; line-height: 15px;" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                     </div>
                 </div>
             </div>
