--- a/content_builder/src/html/IndividualPageComponent.html
+++ b/content_builder/src/html/IndividualPageComponent.html
@@ -27,7 +27,9 @@
             <div class="classes.individual_bg">
                 <div class="classes.individual_inner_bg">
                     <div class="classes.individual_header">
-
+                        <div id="edit_button" class="classes.individual_edit_button">
+                            Edit
+                        </div>
                     </div>
                     <div class="ui stackable three column grid">
                         <div class="column">
