--- a/content_builder/src/html/themes/individual/IndividualDemoPage.html
+++ b/content_builder/src/html/themes/individual/IndividualDemoPage.html
@@ -37,7 +37,7 @@
                                 <div id="basic_info" class="column">
                                     <div class="classes.individual_basic_container">
                                         <div class="classes.individual_profile_pic_container">
-                                            <img class="classes.individual_profile_pic" src="./images/matthew.png"/>
+                                            <img class="classes.individual_profile_pic" src="./../../images/matthew.png"/>
                                         </div>
                                         <div class="classes.individual_basic_name">John Doe</div>
                                         <div class="classes.individual_basic_handle">@JohnDoe</div>
@@ -120,8 +120,18 @@
                 <i class="close icon"></i>
                 <div class="classes.modal_inner">
                     <div class="header">
+                        <div class="classes.modal_edit_banner_container">
+                            <img class="classes.modal_edit_banner" src="./../../images/profile-bannerbg.jpg"/>
+                        </div>
+                        <div class="classes.modal_edit_image_upload">
+                            <label for="hidden-new-file1" class="classes.individual_image_label">
+                                <i class="cloud icon"></i>
+                                    Upload Banner Image
+                            </label>
+                            <input type="file" id="hidden-new-file1" style="display: none">
+                        </div>
                         <div class="classes.modal_edit_image_container">
-                            <img class="classes.modal_edit_image" src="./images/matthew.png"/>
+                            <img class="classes.modal_edit_image" src="./../../images/matthew.png"/>
                         </div>
                         <div class="classes.modal_edit_image_upload">
                             <label for="hidden-new-file1" class="classes.individual_image_label">
