--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -28,6 +28,16 @@
                 <i class="close icon"></i>
                 <div class="classes.modal_inner">
                     <div class="header">
+                        <div class="classes.modal_edit_banner_container">
+                            <img class="classes.modal_edit_banner" src="./../../images/profile-bannerbg.jpg"/>
+                        </div>
+                        <div class="classes.modal_edit_image_upload">
+                            <label for="hidden-new-file1" class="classes.individual_image_label">
+                                <i class="cloud icon"></i>
+                                    Upload Banner Image
+                            </label>
+                            <input type="file" id="hidden-new-file1" style="display: none">
+                        </div>
                         <div class="classes.modal_edit_image_container">
                             <img class="classes.modal_edit_image" src="./images/matthew.png"/>
                         </div>
