added videos to individual demo

--- a/content_builder/src/html/themes/individual/IndividualDemoPage.html
+++ b/content_builder/src/html/themes/individual/IndividualDemoPage.html
@@ -31,8 +31,8 @@
                             Edit
                         </div>
                     </div>
-                    <div class="ui stackable three column grid">
-                        <div class="column">
+                    <div class="ui stackable two column grid">
+                        <div class="six wide column">
                             <div class="ui one column grid">
                                 <div id="basic_info" class="column">
                                     <div class="classes.individual_basic_container">
@@ -82,29 +82,47 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="column">
-                            <div class="ui one column grid">
-                                <div class="column">
-                                    <div class="classes.individual_social_box">
-                                        <h2 class="classes.individual_social_header">
-                                            Twitch Stats
-                                        </h2>
-                                        <div class="classes.individual_social_content">
-                                            <h2 class="classes.individual_social_empty">No Data Found</h2>
+                        <div class="ten wide column">
+                            <div class="ui stackable grid">
+                                <div class="eight wide column">
+                                    <div class="ui one column grid">
+                                        <div class="column">
+                                            <div class="classes.individual_social_box">
+                                                <h2 class="classes.individual_social_header">
+                                                    Twitch Stats
+                                                </h2>
+                                                <div class="classes.individual_social_content">
+                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="ui one column grid">
-                                <div class="column">
-                                    <div class="classes.individual_social_box">
-                                        <h2 class="classes.individual_social_header">
-                                            YouTube Stats
-                                        </h2>
-                                        <div class="classes.individual_social_content">
-                                            <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                <div class="eight wide column">
+                                    <div class="ui one column grid">
+                                        <div class="column">
+                                            <div class="classes.individual_social_box">
+                                                <h2 class="classes.individual_social_header">
+                                                    YouTube Stats
+                                                </h2>
+                                                <div class="classes.individual_social_content">
+                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sixteen wide column">
+                                    <div class="ui one column grid">
+                                        <div class="column">
+                                            <div class="classes.individual_social_box">
+                                                <h2 class="classes.individual_social_header">
+                                                    YouTube Videos
+                                                </h2>
+                                                <div class="classes.individual_social_content">
+                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
