--- a/content_builder/src/html/themes/individual/IndividualDemoPage.html
+++ b/content_builder/src/html/themes/individual/IndividualDemoPage.html
@@ -120,7 +120,9 @@
                                                     YouTube Videos
                                                 </h2>
                                                 <div class="classes.individual_social_content">
-                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                        <iframe title="ifr" width="100%" height="500px" data-component-props="allowFullScreen src={this.props.video1_url}" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
+                                                        <iframe title="ifr" width="100%" height="500px" data-component-props="allowFullScreen src={this.props.video2_url}" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
+                                                        <iframe title="ifr" width="100%" height="500px" data-component-props="allowFullScreen src={this.props.video3_url}" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
                                                 </div>
                                             </div>
                                         </div>
