added you tube links to edit individual

--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -58,6 +58,9 @@
                         <textarea class="classes.modal_individual_edit_about" rows="10" placeholder="Accomplishments"></textarea>
                         <input class="classes.modal_individual_edit_input" placeholder="Twitch" />
                         <input class="classes.modal_individual_edit_input" placeholder="Youtube" />
+                        <input class="classes.modal_individual_edit_input" placeholder="Youtube Video 1" />
+                        <input class="classes.modal_individual_edit_input" placeholder="Youtube Video 2" />
+                        <input class="classes.modal_individual_edit_input" placeholder="Youtube Video 3" />
                     </div>
                 </div>        
             </div>                 
