Fix for light social icons

--- a/content_builder/src/html/themes/enigma/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationNavComponent.html
@@ -26,15 +26,21 @@
             <div class="ui stackable three column grid">
                 <div class="column">
                     <div class="classes.nav_left">
-                        <div class="classes.dark_social_menu_container" data-component-value="{this.props.social_links}">
-                            <div class="classes.dark_social_menu_item">
+                        <div class="classes.dark_social_menu_container">
+                            <div class="classes.dark_social_menu_item" data-component-value="{this.props.social_link1}">
                                 <i class="fa fa-instagram"></i>
                             </div>
-                            <div class="classes.dark_social_menu_item">
-                                <i class="fa fa-twitter"></i>
+                            <div class="classes.dark_social_menu_item" data-component-value="{this.props.social_link2}">
+                                <i class="fa fa-instagram"></i>
                             </div>
-                            <div class="classes.dark_social_menu_item">
-                                <i class="fa fa-youtube"></i>
+                            <div class="classes.dark_social_menu_item" data-component-value="{this.props.social_link3}">
+                                <i class="fa fa-instagram"></i>
+                            </div>
+                            <div class="classes.dark_social_menu_item" data-component-value="{this.props.social_link4}">
+                                <i class="fa fa-instagram"></i>
+                            </div>
+                            <div class="classes.dark_social_menu_item" data-component-value="{this.props.social_link5}">
+                                <i class="fa fa-instagram"></i>
                             </div>
                         </div>
                     </div>
