--- a/content_builder/src/html/themes/individual/IndividualVideosComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualVideosComponent.html
@@ -26,7 +26,7 @@
         <div data-component-name="IndividualSocialStatsComponent" class="">
             <div class="classes.individual_social_box">
                 <h2 class="classes.individual_social_header">
-                    Twitch Stats
+                    Videos
                 </h2>
                 <div class="classes.individual_social_content">
                     <iframe title="ifr" width="100%" height="500px" data-component-props="allowFullScreen src={this.props.video1_url}" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
