--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -15,7 +15,7 @@
          crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jss/9.8.1/jss.min.js"></script>   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
-      <script src="./ckeditor/ckeditor.js"></script>    
+      <script src="../../ckeditor/ckeditor.js"></script>    
       <script type="module">
          import { GlobalTheme, GlobalStyles } from '/Theme.js'
          import {attach_styles} from '/attach-styles.js';
@@ -39,7 +39,7 @@
                             <input type="file" id="hidden-new-file1" style="display: none">
                         </div>
                         <div class="classes.modal_edit_image_container">
-                            <img class="classes.modal_edit_image" src="./images/matthew.png"/>
+                            <img class="classes.modal_edit_image" src="../../images/matthew.png"/>
                         </div>
                         <div class="classes.modal_edit_image_upload">
                             <label for="hidden-new-file1" class="classes.individual_image_label">
