made changes and fixes to edit individual modal

--- a/content_builder/src/html/themes/individual/IndividualDemoPage.html
+++ b/content_builder/src/html/themes/individual/IndividualDemoPage.html
@@ -164,12 +164,18 @@
                     <div id="modal_individual_edit_body" class="classes.modal_individual_edit_body">
                         <input class="classes.modal_individual_edit_input" placeholder="Name" />
                         <input class="classes.modal_individual_edit_input" placeholder="Twitter Handle" />
-                        <input class="classes.modal_individual_edit_input" placeholder="Email" />
+                        <!--<input class="classes.modal_individual_edit_input" placeholder="Email" />-->
                         <input class="classes.modal_individual_edit_input" placeholder="Contact Number" />
                         <textarea class="classes.modal_individual_edit_about" rows="10" placeholder="About"></textarea>
                         <textarea class="classes.modal_individual_edit_about" rows="10" placeholder="Accomplishments"></textarea>
                         <input class="classes.modal_individual_edit_input" placeholder="Twitch" />
                         <input class="classes.modal_individual_edit_input" placeholder="Youtube" />
+                        <div class="classes.modal_individual_submit_button_container">
+                            <div class="classes.modal_individual_submit_button">Cancel</div>
+                        </div>
+                        <div class="classes.modal_individual_submit_button_container">
+                            <div class="classes.modal_individual_submit_button">Submit</div>
+                        </div>
                     </div>
                 </div>        
             </div>  
